<resources>
    <string name="app_name">AlarmaMotion</string>
    <string name="ciudad">Santa Marta</string>
    <string name="fecha">09 Feb, 2023</string>
    <string name="hora">02:00 PM</string>
    <string name="txtIniciarSesion">INICIAR SESIÓN</string>
    <string name="txtRegistrarme">REGISTRARME</string>
    <string name="txtIniciarsesion">Iniciar sesión</string>
    <string name="txtIngreseEmail">Ingrese e-mail</string>
    <string name="txtIngreseContrasena">Ingrese contraseña</string>
    <string name="txtRegistro">Registro</string>
    <string name="txtIngreseUserNameAlias">Ingrese nombre o alias</string>
    <string name="txtRepetirIngreseContrasena">Repetir Contraseña</string>
    <string name="txtListadosAlarmas">Alarmas</string>
    <string name="txtCrearAlarmas">Crear Alarma</string>
    <string name="txtCeluarContactoConfianza">Número celular contacto confianza</string>
    <string name="txtMensajeExitoAlarma">Éxito</string>
    <string name="txtAlarmaSonara">Alarma Sonará a las:</string>
    <string name="txtPosponerAlarma">Posponer 10 Min:</string>
    <string name="txtDesactivarAlarma">Desactivar:</string>
    <string name="txtGuardar">Guardar</string>
    <string name="title_activity_ok_alarma">OkAlarma</string>



    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_alarma_activa">AlarmaActiva</string>
</resources>