<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AlarMotionStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <TextView
        android:id="@+id/alarm_motio"
        android:layout_width="222dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-18sp"
        android:text="Alarm Motion"
        android:textAppearance="@style/alarm_motio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="36dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_bg"
        app:layout_constraintEnd_toStartOf="@+id/alarm_motio"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="325dp"
        android:layout_height="163dp"
        android:layout_marginTop="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarm_motio"
        tools:srcCompat="@drawable/loginimage"
        />


    <TextView
        android:id="@+id/iniciar_ses"
        android:layout_width="143dp"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="-4sp"
        android:text="@string/txtIniciarsesion"
        android:textAppearance="@style/titulo4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/txtIngreseEmail"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciar_ses" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/txtIngreseContrasena"
        android:inputType="textPassword"
        android:paddingHorizontal="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />


    <Button
        android:id="@+id/btnIniciarSesion"
        style="@style/AlarMotionStyle"
        android:layout_width="139dp"
        android:layout_height="39dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_bg"
        android:text="@string/txtIniciarSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/btnRegistrarme"
        style="@style/AlarMotionStyle"
        android:layout_width="139dp"
        android:layout_height="39dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_bg2"
        android:text="@string/txtRegistrarme"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesion" />


</androidx.constraintlayout.widget.ConstraintLayout>